--- a/css/medium.css
+++ b/css/medium.css
@@ -20,7 +20,7 @@
     
     
     /*----------- MAIN --------------*/
-    
+    .domainimg {width: 600px}
     
     
     /*----------- FOOTER --------------*/
