more img changes

--- a/css/medium.css
+++ b/css/medium.css
@@ -21,6 +21,8 @@
     
     /*----------- MAIN --------------*/
     .domainimg {width: 600px}
+    .color1 {width: 600px;}
+    .color2 {width: 500px;}
     
     
     /*----------- FOOTER --------------*/
