update audience information

--- a/css/medium.css
+++ b/css/medium.css
@@ -22,7 +22,7 @@
     /*----------- MAIN --------------*/
     .domainimg {width: 600px}
     .color1 {width: 600px;}
-    .color2 {width: 500px;}
+    .color2 {width: 500px;margin-bottom: 20px;}
     
     
     /*----------- FOOTER --------------*/
