--- a/css/small.css
+++ b/css/small.css
@@ -63,9 +63,8 @@ main img {
     width: 100%;
     height: auto;
 }
-.sun {
-    width: 150px;
-}
+.sun {width: 150px;}
+.color2 {margin-bottom: 20px;}
 /*----------- FOOTER --------------*/
 footer {
     background-color:#ffff60;
