--- a/css/small.css
+++ b/css/small.css
@@ -63,6 +63,8 @@ main img {
     width: 100%;
     height: auto;
 }
+h2 {color:#fca762;}
+
 .sun {width: 150px;}
 .color2 {margin-bottom: 20px;}
 /*----------- FOOTER --------------*/
